Fixes long label text wrapping on weighted repeatable

--- a/tool-ui/src/main/webapp/style/v3/repeatable.less
+++ b/tool-ui/src/main/webapp/style/v3/repeatable.less
@@ -1005,6 +1005,7 @@
   > ol > li {
     > .repeatableLabel {
       padding-left: 120px;
+      padding-right: 368px;
     }
   }
     
